--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "convert Day Journal entries to Journey entries",
   "main": "index.js",
   "scripts": {
-    "start": "eslint --fix index.js && node index.js"
+    "start": "tslint && node index.js"
   },
   "author": "Mark Boomaars <mboomaars@gmail.com>",
   "license": "MIT",
